# opioid-crisis-modeling

./: README.md  create_dataset.py  main.py  pyproject.toml  run_prediction_only.py
data/: all_data.parquet
data/Processed/2022_County_Shapefile/: 2022_filtered_shapefile.dbf  2022_filtered_shapefile.shp  2022_filtered_shapefile.shx
data/Processed/Prescriptions/: Prescription_dispensing_rates.csv
data/Processed/Relative_Risk/: cdc_county_rr_2010_2022.csv  hepvu_county_rr_2014_2021.csv
data/Processed/SVI/: Aged 17 or Younger_final_rates.csv  Aged 65 or Older_final_rates.csv  Below Poverty_final_rates.csv  Crowding_final_rates.csv  Group Quarters_final_rates.csv  Limited English Ability_final_rates.csv  Minority Status_final_rates.csv  Mobile Homes_final_rates.csv  Multi-Unit Structures_final_rates.csv  No High School Diploma_final_rates.csv  No Vehicle_final_rates.csv  Single-Parent Household_final_rates.csv  Unemployment_final_rates.csv
data/Processed/Urbanicity/: NCHS_urbrur_2013_2023.csv  RUCC_urbrur_2013_2023.csv
data/Raw/Mortality_raw/: HepVu_County_Opioid_Indicators-20250221.xlsx  HepVu_mortality_rates_final.csv  cdc_county_deaths_2010_2022.csv  hepvu_MR_long_format.csv  hepvu_county_deaths_2014_2021.csv
data/Raw/Population_raw/: county_population_2010_2022.csv
data/Raw/Prescriptions_raw/: deas_opioid_dispensing_rates.csv  prescription_dispensing_data_cleaning.py
src/: data.py  data_processing.py  feature_importance.py  metrics.py  model_training.py  models.py  visualizations.py
src/models/: xgboost.py
