[project]
name = "opioid-research-risk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "type"}
]
lint = [
    "pylsp-mypy>=0.7.0",
    "pylsp-rope>=0.1.17",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server>=1.13.1",
    "ruff>=0.14.4",
]
type = [
    "types-geopandas>=1.1.1.20250829",
]
